#16 added button to summary pge to add new initiatives

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,9 @@
             <div class="accordion summary-accordion"></div>
         </div>
         <div id="supp-accordion" class="summary-container">
-            <h3 id="supp-title" class="accordion-title">Suplemental</h3>
+            <h3 id="supp-title" class="accordion-title">Suplemental
+                <button class="btn btn-add-init">Add another initiative</button>
+            </h3>
             <div class="accordion summary-accordion"></div>
         </div>
     </div>
