--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="baseline-revenue">
-                <span class="stat-label">Projected revenue:</span> 
+                <span class="stat-label">Projected revenues:</span> 
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="baseline-personnel">
@@ -139,11 +139,11 @@
         <h6 id="section-header"><strong>Supplemental</strong></h6>
         <div id="supp-stats">
             <div class='sidebar-stat-line' id="supp-revenue">
-                <span class="stat-label">Estimated revenue:</span> 
+                <span class="stat-label">Estimated revenues:</span> 
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="supp-expenses">
-                <span class="stat-label">Esimated expenses:</span> 
+                <span class="stat-label">Esimated expenditures:</span> 
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="supp-total">
