#17 added top line amounts to summary -- color coded baseline

--- a/src/index.html
+++ b/src/index.html
@@ -51,15 +51,22 @@
     <!-- Summary page accordion -->
     <div id='accordion-div'>
         <div id='baseline-accordion' class="summary-container">
-            <h3 id="baseline-title" class="accordion-title">Baseline</h3>
-            <div class="accordion summary-accordion"></div>
-        </div>
-        <div id="supp-accordion" class="summary-container">
-            <h3 id="supp-title" class="accordion-title">Suplemental
-                <button class="btn btn-add-init">Add another initiative</button>
+            <h3 id="baseline-title" class="accordion-title">
+                Baseline
+                <span class="top-line-amount cost"></span>
             </h3>
             <div class="accordion summary-accordion"></div>
         </div>
+        <div id="supp-accordion" class="summary-container">
+            <h3 id="supp-title" class="accordion-title">
+                Suplemental
+                <span class="top-line-amount cost"></span>
+            </h3>
+            <div class="accordion summary-accordion"></div>
+        </div>
+        <div class="add-init-btn-div">
+            <button class="btn btn-add-init">Add another initiative</button>
+        </div>        
     </div>
 
     <!-- Space for an initial prompt and response buttons -->
