#22 added place to save edit status of funds

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
             <div class="accordion summary-accordion"></div>
         </div>
         <div class="add-init-btn-div">
-            <button class="btn btn-add-init">Add another initiative</button>
+            <button class="btn btn-add-init">Add new initiative</button>
         </div>        
     </div>
 
