--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,10 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.9.4/dist/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
 <!-- JS excel library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
-
 </head>
+
 <body>
 
 <!-- Page header -->
@@ -71,6 +70,9 @@
         <!-- </form> -->
     </div>
 
+    <!-- Placeholder for tooltip -->
+    <div id="tooltip"></div>
+
     <!-- Add new row button -->
     <div class="row">
         <div id='add-btn-div'>
@@ -78,7 +80,6 @@
         </div>
     </div>
 
-    
     <!-- Summary page accordion -->
     <div id='accordion-div'>
         <div id='baseline-accordion' class="summary-container">
@@ -99,7 +100,6 @@
             <button class="btn btn-add-init">Add new initiative</button>
         </div>        
     </div>
-
 
     <!-- Navigation buttons -->
     <div class="row">
