start to show sidebar by fund

--- a/src/index.html
+++ b/src/index.html
@@ -123,45 +123,12 @@
         <br>
         <h4 id="sidebar-title">Summary</h4>
         <br>
-        <h6 id="section-header"><strong>Baseline</strong></h6>
-        <div id="baseline-stats">
-            <div class='sidebar-stat-line' id="target">
-                <span class="stat-label">FY26 target:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="baseline-revenue">
-                <span class="stat-label">Projected revenues:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="baseline-personnel">
-                <span class="stat-label">Personnel cost:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="baseline-nonpersonnel">
-                <span class="stat-label">Non-personnel cost:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="baseline-total">
-                <span class="stat-label">Total baseline:</span> 
-                <span class="stat"></span>
-            </div>
-        </div>
+        <h5 id="section-header"><strong>Baseline</strong></h5>
+        <div id="baseline-stats"></div>
         <br>
-        <h6 id="section-header"><strong>Supplemental</strong></h6>
-        <div id="supp-stats">
-            <div class='sidebar-stat-line' id="supp-revenue">
-                <span class="stat-label">Estimated revenues:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="supp-expenses">
-                <span class="stat-label">Esimated expenditures:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="supp-total">
-                <span class="stat-label">Total supplemental:</span> 
-                <span class="stat"></span>
-            </div>
-        </div>
+        <!-- Supplemental data -->
+        <h5 id="section-header"><strong>Supplemental</strong></h5>
+        <div id="supp-stats"></div>
     </div>
 </div>
 
