add gray background to sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -123,10 +123,10 @@
         <br>
         <h4 id="sidebar-title">Summary</h4>
         <br>
-        <h5 id="section-header"><strong>Baseline</strong></h5>
+        <h5 class="section-header"><strong>Baseline</strong></h5>
         <div id="baseline-stats"></div>
         <!-- Supplemental data -->
-        <h5 id="section-header"><strong>Supplemental</strong></h5>
+        <h5 class="section-header"><strong>Supplemental</strong></h5>
         <div id="supp-stats"></div>
     </div>
 </div>
