--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!-- JS excel library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
+ <!-- Datatables CSS -->
+ <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+ <!-- Datatables JS -->
+ <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
 </head>
 
 <body>
@@ -61,13 +65,25 @@
     </div>
 
     <!-- Table -->
+     
+    <!-- Filter Dropdowns -->
+    <!-- <div id="filter-container">
+        <label for="filter-position">Filter by Position:</label>
+        <select id="filter-position" class="filter-dropdown">
+            <option value="">All</option>
+        </select>
+        <label for="filter-office">Filter by Office:</label>
+        <select id="filter-office" class="filter-dropdown">
+            <option value="">All</option>
+        </select>
+    </div> -->
+
     <div class="table-container">
-        <!-- <form id="table-form"> -->
-            <table class="table table-bordered mt-3" id="main-table">
-                <thead class="thead-dark"></thead>
-                <tbody></tbody>
-            </table>
-        <!-- </form> -->
+        <!-- Actual table data -->
+        <table class="table table-bordered mt-3 display" id="main-table">
+            <thead class="thead-dark"></thead>
+            <tbody></tbody>
+        </table>
     </div>
 
     <!-- Placeholder for tooltip -->
