fix datatable bug by creating and destroying table html on every page reload

--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,8 @@
         </select>
     </div> -->
 
-    <div class="table-container">
-        <!-- Actual table data -->
-        <table class="table table-bordered mt-3 display" id="main-table">
-            <thead class="thead-dark"></thead>
-            <tbody></tbody>
-        </table>
-    </div>
+    <!-- Spot for table -->
+    <div class="table-container"></div>
 
     <!-- Placeholder for tooltip -->
     <div id="tooltip"></div>
