fix duplicate search bars; fix sidebar loading on empty table

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,9 @@
         </select>
     </div> -->
 
+    
     <!-- Spot for table -->
+    <div id="search-bar-container"></div>
     <div class="table-container"></div>
 
     <!-- Placeholder for tooltip -->
