--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Budget Request Submission Form</title>
+<title>Budget Request Form</title>
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -30,7 +30,7 @@
     <!-- City of Detroit logo -->
     <img src="assets/city-of-detroit-logo.png" alt="Logo" id="logo">
     <!-- Title and subtitle -->
-    <h1>FY2026 Budget Form</h1>
+    <h1 id="title"></h1>
     <h2 id="subtitle"></h2>
 </header>
         
