basic ability to create a filter dropdown object (not yet filtering

--- a/src/index.html
+++ b/src/index.html
@@ -66,20 +66,10 @@
 
     <!-- Table -->
      
-    <!-- Filter Dropdowns -->
-    <!-- <div id="filter-container">
-        <label for="filter-position">Filter by Position:</label>
-        <select id="filter-position" class="filter-dropdown">
-            <option value="">All</option>
-        </select>
-        <label for="filter-office">Filter by Office:</label>
-        <select id="filter-office" class="filter-dropdown">
-            <option value="">All</option>
-        </select>
-    </div> -->
-
+    <!-- Filter Dropdowns for table content -->
+    <div id="filter-container"></div>
     
-    <!-- Spot for table -->
+    <!-- Location for table -->
     <div id="search-bar-container"></div>
     <div class="table-container"></div>
 
