--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,8 @@
     <div id="prompt-div">
         <h3 id="prompt"></h3>
         <br>
+        <!-- Placeholder for progress wheel -->
+        <div id="upload-spinner" class="spinner" style="display: none;"></div>
         <!-- File upload -->
         <input type="file" id="file-input" accept=".xls,.xlsx" />
         <!-- Prompt buttons -->
