adding download button to sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,12 @@
 <div id="sidebar-panel">
     <div class="sidebar-content">
         <br>
-        <h4 id="sidebar-title">Summary</h4>
+        <h4 id="sidebar-title">
+            <span id = "summary-title">Summary</span>
+            <button class="btn" id="sidebar-download-btn">
+                Download <br> Excel
+            </button>
+        </h4>
         <br>
         <h5 class="section-header"><strong>Baseline</strong></h5>
         <div id="baseline-stats"></div>
