update welcome text

--- a/src/index.html
+++ b/src/index.html
@@ -36,22 +36,6 @@
         
 <!-- Main content -->
 <div id="main-panel">
-        
-    <!-- Welcome page buttons -->
-     <div id="welcome-page">
-        <button class="btn step" id="step-upload">
-            1. Upload your Excel data
-        </button>
-        <button class="btn step" id="step-revenue">
-            2. Complete your baseline request
-        </button>
-        <button class="btn step" id="step-initiatives">
-            3. Propose new initiatives
-        </button>
-        <button class="btn step" id="step-finish">
-            4. Review and download submission
-        </button>
-    </div>
 
     <!-- Space for an initial prompt and response buttons -->
     <div id="prompt-div">
@@ -62,6 +46,25 @@
         <!-- Prompt buttons -->
         <button class="btn" id="option1"></button>
         <button class="btn" id="option2"></button>
+    </div>
+
+    <!-- Welcome page buttons -->
+    <div id="welcome-page">
+        <!-- <button class="btn step" id="step-upload">
+            1. Upload your Excel data
+        </button>
+        <button class="btn step" id="step-revenue">
+            2. Complete your baseline request
+        </button>
+        <button class="btn step" id="step-initiatives">
+            3. Propose new initiatives
+        </button>
+        <button class="btn step" id="step-finish">
+            4. Review and download submission
+        </button> -->
+        <button class="btn step" id="step-upload">
+            Start by uploading your Excel data >>
+        </button>
     </div>
 
     <!-- Table -->
