--- a/src/index.html
+++ b/src/index.html
@@ -50,18 +50,6 @@
 
     <!-- Welcome page buttons -->
     <div id="welcome-page">
-        <!-- <button class="btn step" id="step-upload">
-            1. Upload your Excel data
-        </button>
-        <button class="btn step" id="step-revenue">
-            2. Complete your baseline request
-        </button>
-        <button class="btn step" id="step-initiatives">
-            3. Propose new initiatives
-        </button>
-        <button class="btn step" id="step-finish">
-            4. Review and download submission
-        </button> -->
         <button class="btn step" id="step-upload">
             Start by uploading your Excel data >>
         </button>
@@ -118,6 +106,9 @@
                     <strong>Continue &gt;&gt;</strong>
                 </button>
             </div>
+            <button class="btn" id="return-to-summary">
+                <strong>Return to Summary</strong>
+            </button>
         </div>
     </div>
 
