add button for skipping to summary

--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,9 @@
     <div class="sidebar-content">
         <br>
         <h4 id="sidebar-title">Summary</h4>
+        <button id="summary-btn-sidebar" class="btn">
+            Skip to final summary page
+        </button>
         <br>
         <h5 class="section-header"><strong>Baseline</strong></h5>
         <div id="baseline-stats"></div>
