remove confusing totals at top of baseline and supp accordions

--- a/src/index.html
+++ b/src/index.html
@@ -77,14 +77,14 @@
         <div id='baseline-accordion' class="summary-container">
             <h3 id="baseline-title" class="accordion-title">
                 Baseline
-                <span class="top-line-amount cost"></span>
+                <!-- <span class="top-line-amount cost"></span> -->
             </h3>
             <div class="accordion summary-accordion"></div>
         </div>
         <div id="supp-accordion" class="summary-container">
             <h3 id="supp-title" class="accordion-title">
                 Suplemental
-                <span class="top-line-amount cost"></span>
+                <!-- <span class="top-line-amount cost"></span> -->
             </h3>
             <div class="accordion summary-accordion"></div>
         </div>
