--- a/src/index.html
+++ b/src/index.html
@@ -50,24 +50,10 @@
 
     <!-- Welcome page buttons -->
     <div id="welcome-page">
-        <!-- <button class="btn step" id="step-upload">
-            1. Upload your Excel data
-        </button>
-        <button class="btn step" id="step-revenue">
-            2. Complete your baseline request
-        </button>
-        <button class="btn step" id="step-initiatives">
-            3. Propose new initiatives
-        </button>
-        <button class="btn step" id="step-finish">
-            4. Review and download submission
-        </button> -->
         <button class="btn step" id="step-upload">
             Start by uploading your Excel data >>
         </button>
     </div>
-
-    <!-- Table -->
      
     <!-- Filter Dropdowns for table content -->
     <div id="filter-container"></div>
@@ -86,27 +72,6 @@
         </div>
     </div>
 
-    <!-- Summary page accordion -->
-    <div id='accordion-div'>
-        <div id='baseline-accordion' class="summary-container">
-            <h3 id="baseline-title" class="accordion-title">
-                Baseline
-                <span class="top-line-amount cost"></span>
-            </h3>
-            <div class="accordion summary-accordion"></div>
-        </div>
-        <div id="supp-accordion" class="summary-container">
-            <h3 id="supp-title" class="accordion-title">
-                Suplemental
-                <span class="top-line-amount cost"></span>
-            </h3>
-            <div class="accordion summary-accordion"></div>
-        </div>
-        <div class="add-init-btn-div">
-            <button class="btn btn-add-init">Add new initiative</button>
-        </div>        
-    </div>
-
     <!-- Navigation buttons -->
     <div class="row">
         <div class="col-md-12">
@@ -117,8 +82,32 @@
                 <button class="btn" id="btn-next">
                     <strong>Continue &gt;&gt;</strong>
                 </button>
+                <button class="btn" id="return-to-summary">
+                    <strong>Return to Summary</strong>
+                </button>
             </div>
         </div>
+    </div>
+
+    <!-- Summary page accordion -->
+    <div id='accordion-div'>
+        <div id='baseline-accordion' class="summary-container">
+            <h3 id="baseline-title" class="accordion-title">
+                Baseline
+                <!-- <span class="top-line-amount cost"></span> -->
+            </h3>
+            <div class="accordion summary-accordion"></div>
+        </div>
+        <div id="supp-accordion" class="summary-container">
+            <h3 id="supp-title" class="accordion-title">
+                Suplemental
+                <!-- <span class="top-line-amount cost"></span> -->
+            </h3>
+            <div class="accordion summary-accordion"></div>
+        </div>
+        <div class="add-init-btn-div">
+            <button class="btn btn-add-init">Add new initiative</button>
+        </div>        
     </div>
 
     <!-- Placeholder for progress wheel -->
@@ -131,6 +120,9 @@
     <div class="sidebar-content">
         <br>
         <h4 id="sidebar-title">Summary</h4>
+        <button id="summary-btn-sidebar" class="btn">
+            Skip to final summary page
+        </button>
         <br>
         <h5 class="section-header"><strong>Baseline</strong></h5>
         <div id="baseline-stats"></div>
